--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,5 +1,5 @@
 @font-face {
-   /* font-display: swap; */
+   font-display: swap;
    font-family: 'SEGA LOGO FONT';
    font-style: normal;
    font-weight: normal;
